--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
 "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.s",
+      "dest": "server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTION"]
     }
   ]
